fix spacing of the featured div on home.js

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -22,6 +22,14 @@
    padding: 2%;
    padding-top: 2em;
 }
+.home .featured h3 {
+   margin-left: 3.3em;
+   margin-bottom: 0;
+}
+.home .featured span {
+   margin-left: 4em;
+   padding: 0;
+}
 .home a {
    text-decoration: none;
    font-weight: 700;
@@ -53,9 +61,13 @@
    .home p a {
       text-decoration: underline;
    }
-   .home h2 {
-      margin: 0 0 0 .5em;
-      opacity: .8;
+   .home .featured h3 {
+      margin-left: 1.3em;
+      margin-bottom: 0;
+   }
+   .home .featured span {
+      margin-left: 2em;
+      padding: 0;
    }
 }
 @media only screen and (max-width: 320px) {
